--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - go get -u honnef.co/go/tools/cmd/megacheck
 - go get -u github.com/client9/misspell/cmd/misspell
 - go get -u github.com/nats-io/go-nats
+- go get -u github.com/nats-io/gnatsd
 - go get -u github.com/hashicorp/raft
 - go get -u github.com/hashicorp/raft-boltdb
 before_script:
