--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,10 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.9
+      - image: circleci/golang:1.12
 
     working_directory: /go/src/github.com/liftbridge-io/nats-on-a-log
     steps:
       - checkout
+      - run: export GO111MODULE=on
       - run: go get -v -t -d ./...
       - run: go test -v ./...
