Fix enabling go modules

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,5 @@ jobs:
     working_directory: /go/src/github.com/liftbridge-io/nats-on-a-log
     steps:
       - checkout
-      - run: export GO111MODULE=on
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: GO111MODULE=on go get -v -t -d ./...
+      - run: GO111MODULE=on go test -v ./...
