--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,5 @@ jobs:
     working_directory: /go/src/github.com/liftbridge-io/nats-on-a-log
     steps:
       - checkout
-      - run: GO111MODULE=on go get -v -t -d ./...
+      - run: GO111MODULE=on go get -v -d ./...
       - run: GO111MODULE=on go test -v ./...
